# Lycanthrope

./: .gitignore  Cargo.toml  README.md  build.rs  lycanthrope.bat  lycanthrope.sh
.github/workflows/: ci.yml  release.yml
csrc/: checksum.c  packet.c  rawsock.c
csrc/include/: checksum.h  packet.h  platform.h  rawsock.h
src/: args.rs  errors.rs  lib.rs  main.rs
src/ffi/: bindings.rs  mod.rs
src/net/: connection.rs  injector.rs  mod.rs  packet.rs  sniffer.rs
src/tui/: app.rs  mod.rs  widgets.rs
tests/: checksum_test.rs  connection_test.rs  hijack_test.rs  packet_test.rs
