[package]
name = "lycanthrope"
version = "0.1.0"
edition = "2024"

[lib]
name = "lycanthrope"
path = "src/lib.rs"

[[bin]]
name = "lycanthrope"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
pnet = "0.35"
pktparse = "0.7"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }


[build-dependencies]
cc = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }